<resources>
    <string name="app_name">Lokmart</string>
    <string name="connection_error">"Connection error "</string>
    <string name="error">"An error occured "</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="fragment_onboarding_text">NEXT</string>
    <string name="onboarding_title_0">Welcome to LokMart!\\nGrocery Applications</string>
    <string name="onboarding_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="fragment_onboarding_get_string">Get Started\n</string>
    <string name="fragment_onboarding_next">Next</string>
    <string name="fragment_sign_in_button">SIGN IN</string>
    <string name="welcome_to_lokmart_n_grocery_applications">Welcome to LokMart!\n Grocery Applications</string>
    <string name="fragment_sing_in_sign_up">Sign Up</string>
    <string name="fragment_sign_in_no_account">Don\'t have an account</string>
    <string name="fragment_sign_in_forgot_password"><u>Forgot Password?</u></string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_username">Username</string>
    <string name="fragment_sign_in_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="fragment_sign_in_title">Welcome back</string>
    <string name="app_description">GROCERY APP</string>
    <string name="fragment_sign_un_title">Create your account</string>
    <string name="fragment_sign_up_email">Email</string>
    <string name="fragment_sign_up_register">REGISTER</string>
    <string name="fragment_sing_up_terms_and_privacy">By tapping “Sign Up” you accept our %s and %s </string>
    <string name="terms_of_use">terms of use</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="fragment_sign_up_have_account">Already have account?</string>
    <string name="fragment_sing_un_sign_ip">Sign in</string>
    <string name="already_registered">This email is already registered</string>
    <string name="fragment_home_search">Search...</string>
    <string name="fragment_home_good_morning">Good morning</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="clear_all">Clear All</string>
    <string name="item_product_ratings_count">%d ratings</string>
    <string name="fragment_item_product_discount">%d%% OFF</string>
    <string name="error_loading">an error occured...</string>
    <string name="retry">Retry\n</string>
    <string name="fragment_home_greeting">Hello, %s</string>
    <string name="item_category_count">%d items</string>
    <string name="price">$%.1f</string>
    <string name="price_striked"><strike>$%.1f</strike></string>
    <string name="fragment_categories_title">Categories</string>
    <string name="item_category_counts">%d items</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_search_recent">Recent search</string>
    <string name="fragment_search_result">Search Result</string>
    <string name="fragment_filter_title">Filter Options</string>
    <string name="fragment_filter_recet">Recet</string>
    <string name="fragment_range_title">SORT BY PRICE RANGE</string>
    <string name="fragment_filter_rating_title">SORT BY RATING</string>
    <string name="fragment_filter_one_two_starts">1 -2 Stars</string>
    <string name="fragment_filter_two_three_starts">2 - 3 Stars</string>
    <string name="fragment_filter_three_four_starts">3 - 4 Stars</string>
    <string name="fragment_filter_four_five_starts">4 - 5 Stars</string>
    <string name="fragment_filter_10_20_starts">20 - 30 %%</string>
    <string name="fragment_filter_25_50_starts">25 - 50 %%</string>
    <string name="fragment_filter_50_70_starts">50 - 70 %%</string>
    <string name="fragment_filter_70_plus_starts">70%%above</string>
    <string name="fragment_filter_others_title">Sort by others</string>
    <string name="fragment_filter_discount">Discount</string>
    <string name="fragment_filter_free_shipping">Free Shipping</string>
    <string name="fragment_filter_voucher">Voucher</string>
    <string name="fragment_filter_sameDay_delivery">Same day delivery</string>
    <string name="fragment_filter_categories_error">Error filter categories</string>
    <string name="fragment_filter_button">Apply</string>
    <string name="fragment_product_reviews">%.1f (%d reviews)</string>
    <string name="fragment_product_free_delivery">Free delivery</string>
    <string name="fragment_related_product">Related product</string>
    <string name="fragment_product_add">ADD TO CART</string>
</resources>